# cpy

./: README.md
api/: CMakeLists.txt  api.cc  build-Linux-cpy.sh  build-Linux-so.sh  build-Linux.sh  infer.hpp  main.cpp  main.py  mops.hpp  setup.py
environ/: Dockerfile
libs/: CMakeLists.txt  build-Linux.sh  libs.cpp  mops.cpp
src/: CMakeLists.txt  infer.cpp  main.cpp
